--- a/index.html
+++ b/index.html
@@ -4,13 +4,65 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <main>
+
+      <div id="phones-img-section">
+        <img src="./images/phones.png" alt="mobile phones">
+      </div>
+
+
+      <div class="main-content">
+
+        <section id="title-section">
+          <img src="./images/brand.png" alt="Instagram">
+
+          <div id="log-in-button">
+            <a href="#0">Log in</a>
+          </div>        
+        </section>
+
+        <article>
+          <h2>Capture and Share the World's Moments</h2>
+
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Oh yeah, did we mention it's free?
+          </p>
+        </article>
+        
+        <section id="appstore-links">
+          <a href="#0">
+            <img src="./images/badge-iphone.png" alt="iphone appstore link">
+          </a>
+
+          <a href="#0">
+            <img src="./images/badge-android.png" alt="android appstore link">
+          </a>
+        </section>
+
+
+      </div class="container">
+
+      
+    </main>
+
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+    </footer>
   </body>
 </html>
