--- a/index.html
+++ b/index.html
@@ -1,16 +1,68 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
   <head>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheets" href="./styles/style.css">
+
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <div>
+
+      <div>
+        <img src="./images/phones.png" alt="Phones images">
+      </div>
+
+      <header>
+
+        <img src="./images/brand.png" alt="Brand-Image">
+
+        <a href="#" class="log-in-button">Log in</a>
+
+        <div>
+
+          <h3>Capture and Share the World's Moments</h3>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+    Oh yeah, did we mention it's free? </p>
+
+          <img src="./images/badge-iphone.png" alt="Download on the app store image">
+          <img src="./images/badge-android.png" alt="Get it on Google play image">
+
+        </div>
+
+      </header>
+
+
+
+    </div>
+
+    <footer>
+
+      <nav>
+
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+
+      </nav>
+
+    </footer>           
+
   </body>
+
 </html>
