--- a/index.html
+++ b/index.html
@@ -2,15 +2,63 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+
+    <link href="styles/style.css" rel="stylesheet" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="container">
+      <main>
+        <div class="phones">
+          <img src="images/phones.png" alt="instagram phone image" />
+        </div>
+        <div class="info-block">
+          <div class="logo-row">
+            <img class="logo" alt="instagram logo" src="images/brand.png" />
+            <div class="home-btn">
+              <img alt="home icon" class="icon" src="images/home.png" />
+              Log in
+            </div>
+          </div>
+          <div class="content-block">
+            <h1>
+              Capture and Share<br />
+              the World's Moments
+            </h1>
+            <p>
+              Instagram is a <strong>fast, beautiful</strong> and
+              <strong>fun</strong> way to share your life with friends and
+              family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <img src="images/badge-iphone.png" class="icon" alt="app store" />
+            <img src="images/badge-android.png" alt="google store" />
+          </div>
+        </div>
+      </main>
+      <nav>
+        <ul>
+          <li><a>About Us</a></li>
+          <li><a>Support</a></li>
+          <li><a>Blog</a></li>
+          <li><a>Press</a></li>
+          <li><a>API</a></li>
+          <li><a>Jobs</a></li>
+          <li><a>Privacy</a></li>
+          <li><a>Terms</a></li>
+          <li>
+            &copy; 2014 Instagram
+          </li>
+        </ul>
+      </nav>
+    </section>
   </body>
 </html>
