--- a/index.html
+++ b/index.html
@@ -4,13 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="up-blue">
+      <img src="./images/brand.png" alt="Logo Instagram">
+      <button><img src="./images/home.png" alt="">Log in</button>
+    </div>
+    <div class="central">
+      <div class="phone">
+        <img src="./images/phones.png" alt="Phones">
+      </div>
+      <div class="description">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life with
+          friends and family. <br> <br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br> <br>
+          Oh yeah, did we mention it's free? 
+        </p>
+        <div class="logos-apple-android">
+          <img src="./images/badge-iphone.png" alt="">
+          <img src="./images/badge-android.png" alt="">
+        </div>
+      </div>
+    </div>
+
+    <div class="menu">
+      <ul>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#support">Support</a></li>
+        <li><a href="#blog">Blog</a></li>
+        <li><a href="#press">Press</a></li>
+        <li><a href="#api">API</a></li>
+        <li><a href="#jobs">Jobs</a></li>
+        <li><a href="#privacy">Privacy</a></li>
+        <li><a href="#terms">Terms</a></li>
+      </ul>
+      <span>&copy; 2014 Instagram</span>
+    </div>
   </body>
 </html>
