--- a/index.html
+++ b/index.html
@@ -4,13 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+    <!-- Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    Jobs Privacy Terms &copy; 2014 Instagram -->
+    
+      <div class="main-container">
+        <div class="container">
+          <div class="telephone">
+            <img src="./images/phones.png" alt="phone with instagram app">
+          </div>
+          <div class="container-card">
+            <div class="card-header">
+                <img src="./images/brand.png" alt="Instagram logo">
+                <div class="login">
+                  <img src="./images/home.png" alt="home icon"><span><strong>Log in</strong></span> 
+                </div>
+            </div>
+            <div class="card-body">
+              <h2 class="capture">Capture and Share <br/>the World's Moments </h2>
+              <p>Instagram is a <strong>fast</strong>, <strong>beautiful </strong> and <strong>fun</strong> way to share your life  <br/>  with
+                friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look  <br/>  and feel, then post to Instagram
+                &mdash; it's that easy. You can  <br/>  even share to Facebook, Twitter, Tumblr and more. It's a  <br/> new way to see the world.</p>
+              <p> Oh yeah, did we mention it's free?</p>
+              <div class="card-buttons">
+                <div class="app-store-button">
+                  <img src="./images/badge-iphone.png" alt="App Store button">
+                </div>
+                <div class="google-play-button">
+                  <img src="./images/badge-android.png" alt="google play button">
+                </div>
+            </div>  
+            </div>
+          </div>
+        </div>
+        <footer class="footer">
+          <ul>
+            <li>ABOUT US</li>
+            <li>SUPPORT</li>
+            <li>BLOG</li>
+            <li>PRESS</li>
+            <li>API</li>
+            <li>JOBS</li>
+            <li>PRIVACY</li>
+            <li>TERMS</li>
+            <li style="color: #d2d3d4"> &copy; 2014 INSTAGRAM</li>
+          </ul>
+        </footer>
+      </div>
+    </main>
   </body>
 </html>
