--- a/index.html
+++ b/index.html
@@ -5,12 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" type='text/css' href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+       
+    </header>
+   
+    <main>
+      <figure>
+        <img id="image-device" src="images/phones.png" alt="image devices">
+        </figure>
+      <section>
+      <div id="container-header" >
+        <img src="images/brand.png">
+        <button>
+          <img src="images/home.png">
+          Log in
+        </button>
+      </div>
+      <div id="section-text">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+          friends and family.
+        </p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div id="images-logos">
+        <img src="images/badge-iphone.png" alt="App Store">
+        <img src="images/badge-android.png" alt="Google Play">
+        </div>
+      </div>
+    </section>
+    </main>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+
+
+    </footer>
   </body>
 </html>
