--- a/index.html
+++ b/index.html
@@ -9,16 +9,41 @@
 </head>
 
 <body>
-  <h3>Capture and Share the World's Moments</h3>
+  <section>
+    <div id="backgroundBlue"></div>
 
-  <p>Instagram is a fast, beautiful and fun way to share your life with
-    friends and family.</p>
+    <div class="iphone">
+      <img src="./images/phones.png" alt="iphones">
+    </div>
 
-  <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-  </p>
+    <div>
+      <div class="headLogo">
+        <div>
+          <img src="./images/brand.png" alt="Instagram">
+        </div>
 
-  <p>Oh yeah, did we mention it's free?</p>
+        <div class="button">
+          <img src="./images/home.png" alt="">
+          <a href="#">Log in</a>
+        </div>
+      </div>
+
+      <div class="frame">
+        <h3>Capture and Share the World's Moments</h3>
+        <p>Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.</p>
+        <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+    </div>
+
+
+  </section>
+
+
 
   <footer>
     <ul>
