--- a/index.html
+++ b/index.html
@@ -3,14 +3,65 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css">
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <!-- Main -->
+    <main>
+      <!-- Hero Image Section -->
+      <section id="hero">
+        <img src="./images/phones.png" alt="Phones">
+      </section>
+
+      <!-- Info Section -->
+      <section id="info">
+        <header>
+          <nav>
+            <div class="logo">
+              <img src="images/brand.png" alt="Instagram logo">
+            </div>
+            <button class="login">
+              <img src="images/home.png" alt="login" class="login__icon">
+              <p class="login__text">Log in</p>
+            </button>
+          </nav>
+        </header>
+
+        <div class="info__box">
+          <h1 class="info__box-title">Capture and Share the World's Moments</h1>
+          <p class="info__box-text">Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+
+          <div class="downloads">
+            <a href="https://apps.apple.com/us/app/instagram/id389801252">
+              <img src="images/badge-iphone.png" alt="Download on the App Store">
+            </a>
+            <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=nl">
+              <img src="images/badge-android.png" alt="Get it on Google Play">
+            </a>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+      <ul class="footer__menu">
+        <li><a href="#" class="footer__menu-item">About Us</a></li>
+        <li><a href="#" class="footer__menu-item">Support</a></li>
+        <li><a href="#" class="footer__menu-item">Blog</a></li>
+        <li><a href="#" class="footer__menu-item">Press</a></li>
+        <li><a href="#" class="footer__menu-item">API</a></li>
+        <li><a href="#" class="footer__menu-item">Jobs</a></li>
+        <li><a href="#" class="footer__menu-item">Privacy</a></li>
+        <li><a href="#" class="footer__menu-item">Terms</a></li>
+      </ul>
+      <p class="copyright">&copy; 2014 Instagram</p>
+    </footer>
   </body>
 </html>
