--- a/index.html
+++ b/index.html
@@ -3,14 +3,61 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Instagram is a fast, beautiful and fun way to share your life with
+    friends and family."/>
+    <link rel="stylesheet" href="styles/style.css">
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
+    <section id="blue-section">
+    </section>
+    <section id ="middle-section">
+      <div id="phones-div">
+        <img id="phones" src="/images/phones.png"/>
+      </div>
+      <div id="content-div">
+        <div id="logos">
+          <img src="/images/brand.png"/>
+          <div id="log-in">
+            <img src="/images/home.png"/>
+            <p>Log in</p>
+          </div>
+        </div>
+        <div id="text">
+          <h1>Capture and Share <br> the World's Moments</h1>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.</p><p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div id="download-icons">
+          <a target="_blank" href="https://apps.apple.com/us/app/instagram/id389801252"> <img class="icons" src="/images/badge-iphone.png"/></a>
+          <a target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en"> <img class="icons" src="/images/badge-android.png"/></a>
+        </div>
+      </div>
+    </section>
+    <nav>
+      <ul>
+        <li><a href="#blue-section">About Us</a></li>
+        <li><a href="#blue-section">Support</a></li>
+        <li><a href="#blue-section">Blog</a></li>
+        <li><a href="#blue-section">Press</a></li>
+        <li><a href="#blue-section">API</a></li>
+        <li><a href="#blue-section">Jobs</a></li>
+        <li><a href="#blue-section">Privacy</a></li>
+        <li><a href="#blue-section">Terms</a></li>
+        <li id="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </nav>
+  </body>
+</html>
+
+
+<!--
     Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
     Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
-</html>
+-->
