--- a/index.html
+++ b/index.html
@@ -4,13 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header id="background">
+      <div id="large-image">
+        <img id="iphones" src="images/phones.png" alt="phones">
+      </div>
+      <div id="instagram">
+        <img src="images/brand.png" alt="instagram logo">
+      </div>
+      <div id="login">
+        <button id="button" type="button"><img src="images/home.png" alt="login button"> Log in</></button>
+      </div>
+    </header>
+    <div id="main-content">
+      <h1>Capture and Share<br>the World's Moments</h1> 
+      <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life<br>with
+      friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look<br>and feel, then post to Instagram
+      &mdash; it's that easy. You can<br>even share to Facebook, Twitter, Tumblr and more. It's a<br>new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <div id="download-buttons">
+        <img id="app-store" src="images/badge-iphone.png" alt="appstore logo"> 
+        <img id="google-play" src="images/badge-android.png" alt="Google play logo">  
+      </div> 
+    </div>
   </body>
+  <footer>
+    <ul id="nav-bar">
+      <li href=#aboutus>About Us</li>
+      <li href=#support>Support</li>
+      <li href=#blog>Blog</li>
+      <li href=#press>Press</li>
+      <li href=#API>API</li>
+      <li href=#jobs>Jobs</li>
+      <li href=#privacy>Privacy</li>
+      <li href=#terms>Terms</li>
+      <li id="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </html>
