--- a/index.html
+++ b/index.html
@@ -1,12 +1,57 @@
+@@ -2,30 +2,78 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css"/>
   </head>
   <body>
+    <div class="firstsection">
+    </div>
+    <div class="section">
+      <div class="content">
+        <img src="images/phones.png" alt="phones"/>
+        <div class="right-side">
+          <div class="logo">
+            <img src="images/brand.png" alt="brand"/>
+            <div class="button">
+              <img src="images/home.png" alt="home"/>
+              <li id="log-in">Log in</li>
+            </div>
+          </div>
+          <div class="message">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a fast, beautiful and fun way to share your life with
+              friends and family.<br><br>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              – it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br><br>
+              Oh yeah, did we mention it's free?</p>
+          </div>
+          <div class="badges">
+            <img src="images/badge-iphone.png" alt="iphone-badge"/>
+            <img src="images/badge-android.png" alt="android-badge"/>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <ul>
+          <li>ABOUT US</li>
+          <li>SUPPORT</li>
+          <li>BLOG</li>
+          <li>PRESS</li>
+          <li>API</li>
+          <li>JOBS</li>
+          <li>PRIVACY</li>
+          <li>TERMS</li>
+          <li id="copyright">©2014 INSTAGRAM</li>
+        </ul>
+      </div>
+    </div>
+  </body>
+</html>
+<!--
     Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
@@ -14,3 +59,4 @@
     Jobs Privacy Terms &copy; 2014 Instagram
   </body>
 </html>
+--> 
