--- a/index.html
+++ b/index.html
@@ -4,13 +4,66 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="./styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id='background'>
+    </div>
+
+    <section id='main-container'>
+
+
+      <div id='app-img'>
+        <img src="./images/phones.png" alt="Iphone App">
+      </div>
+
+
+      <div id='content'>
+        <div id='logo'>
+          <img src="./images/brand.png" alt="Instagram Logo">
+          <button id='login'>
+            <img src="./images/home.png" alt="Home icon">
+            <p>Log in</p>
+          </button>
+        </div>  
+
+
+        <article>
+          <img id="frame" src="./images/frame.png" alt="Frame">
+
+          <div id='info'>
+            <h3>Capture and Share<br>the World's Moments</h3>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family. <br><br>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+              Oh yeah, did we mention it's free?
+            </p>
+          </div>
+        </article>
+
+
+        <div id='app-stores'>
+          <a href="https://apps.apple.com/us/app/instagram/id389801252" target="_blank"><img src="./images/badge-iphone.png" alt="App Store"></a>
+          <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en" target="_blank"><img src="./images/badge-android.png" alt="Google Play"></a>
+        </div>
+      </div>
+
+    </section>
+
+    <footer>
+      <ul>
+        <li><a href="#"></a>ABOUT US</li>
+        <li><a href="#"></a>SUPPORT</li>
+        <li><a href="#"></a>BLOG</li>
+        <li><a href="#"></a>PRESS</li>
+        <li><a href="#"></a>API</li>
+        <li><a href="#"></a>JOBS</li>
+        <li><a href="#"></a>PRIVACY</li>
+        <li><a href="#"></a>TERMS</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+
   </body>
 </html>
