--- a/index.html
+++ b/index.html
@@ -9,28 +9,23 @@
 </head>
 
 <body>
-  <section>
-    <div id="backgroundBlue"></div>
-
-    <div class="iphone">
+  <section id="main">
+    <div id="iphone">
       <img src="./images/phones.png" alt="iphones">
     </div>
 
-    <div>
-      <div class="headLogo">
-        <div>
-          <img src="./images/brand.png" alt="Instagram">
-        </div>
-
-        <div class="button">
-          <img src="./images/home.png" alt="">
-          <a href="#">Log in</a>
-        </div>
+    <div id="content">
+      <div id="login">
+        <img src="./images/brand.png" alt="Instagram">
+        <button><img src="/images/home.png" alt="">
+          <p>Log in</p>
+        </button>
       </div>
 
-      <div class="frame">
-        <h3>Capture and Share the World's Moments</h3>
-        <p>Instagram is a fast, beautiful and fun way to share your life with
+      <div id="description">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
+          life with
           friends and family.</p>
         <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
           &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
@@ -38,14 +33,17 @@
         </p>
         <p>Oh yeah, did we mention it's free?</p>
       </div>
+
+      <div id="download-links">
+        <img src="/images/badge-iphone.png" alt="iphone download">
+        <img src="/images/badge-android.png" alt="andriod download">
+      </div>
     </div>
-
-
   </section>
 
 
 
-  <footer>
+  <footer id="footer">
     <ul>
       <li>
         <a href="#">About Us</a>
